--- a/src/scss/UI/controls/menu-control.scss
+++ b/src/scss/UI/controls/menu-control.scss
@@ -13,7 +13,7 @@
   &__button {
     display: flex;
     align-items: center;
-    gap: 16px;
+    column-gap: 16px;
 
     font-family: inherit;
     font-weight: 300;
